2015-05-15  Peter Stephenson  <p.stephenson@samsung.com>

	* 35151: Src/subst.c: improved check for both b and q flags.

	* 35131: Src/pattern.c: "[]" in a pattern is treated as an empty
	character set (matching nothing) if there are no more active "]"
	is in the pattern.

2015-05-14  Oliver Kiddle  <opk@zsh.org>

	* 35139: Completion/Zsh/Context/_brace_parameter: add (b) flag

	* Øystein Walle: 34841 (tweaked): Src/builtin.c:
	allow grouping of thousands in printf format string

	* unposted: Completion/BSD/Type/.distfiles: include new dir

	* Daniel Hahler: 35062: Completion/Unix/Command/_git:
	__git_setup_revision_options includes __git_setup_diff_options

	* Daniel Hahler: 35061: Completion/Unix/Command/_git:
	add __git_setup_diff_stage_options and use it with
	_git-diff-files and _git-diff explicitly

	* Daniel Hahler: 35016: Completion/Unix/Command/_git:
	introduce new pretty formats %g[sdD] for reflog information

2015-05-14  Peter Stephenson  <p.stephenson@samsung.com>

	* 35110: Src/builtin.c, Doc/Zsh/params.yo: don't
	implicitly initialize restricted integers to zero.

2015-05-13  Oliver Kiddle  <opk@zsh.org>

	* 35092: Src/Zle/zle_params.c: fix for numeric arguments
	from vi operator pending mode

	* 35093: NEWS, Functions/Zle/select-bracketed,
	Functions/Zle/select-quoted, Functions/Zle/surround:
	new zle widgets for Vim-style text objects

2015-05-13  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* 35114: Src/Modules/zutil.c: zformat -a multibyte char widths.

	* Christian Hesse: 35107: Completion/Unix/Command/_ip: new ip
	options.

2015-05-13  Peter Stephenson  <p.stephenson@samsung.com>

	* users/20203: Src/builtin., Src/exec.c, Test/A01grammar.ztst:
	nested function in always traps after exit didn't work.

2015-05-12  Jun-ichi Takimoto <takimoto-j@kba.biglobe.ne.jp>

	* 35086: Doc/Zsh/expn.yo: reapply 35067 (with 35071) which
	has been mistakenly reverted by 35075

2015-05-12  Daniel Hahler  <git@thequod.de>
